[metadata]
name = cprtutorial
version = 2.1.0
description = Web portal for managing autobids
long_description = file: README.md

[options]
packages = cprtutorial
install_requires =
    alembic ~=1.5
    email-validator ~=1.1
    Flask ~=1.1
    Flask-Bootstrap~=3.3
    Flask-Excel~=0.0
    Flask-Login~=0.5
    Flask-Migrate~=2.7
    Flask-SQLAlchemy~=2.5
    Flask-WTF~=0.14
    pytest~=6.2
    SQLAlchemy~=1.4
    WTForms~=2.3
include_package_data = True
